Add links to linkedin, github, and projects. Modify image size.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,9 +9,21 @@
   <body>
     <div id="content">
       <h1>Siema's Portfolio</h1>
-      <img src="/images/cat.jpg" />
-      <p>Hi! I'm Siema, a rising junior at Macaulay in City College. I want to make more accessible systems!</p>
-      <p>This is my portfolio, where I include my projects!</p>
+      <a href="https://www.linkedin.com/in/siemaalam/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://github.com/siemaaa" target="_blank" rel="noopener noreferrer">GitHub</a>
+      <img src="/images/cat.jpg" width="100"/>
+      <p>Hi! I'm Siema, a rising junior at Macaulay in City College. I want to make more accessible systems!
+        I come from immigrant parents, so I grew up feeling that a lot of things, especially technology, were not
+        made with them in mind. Accessibility to me means breaking down barriers and making products that are easy 
+        for everyone to use. Technology can do so much for the world, so everyone should have an equitable chance
+        to understand and enjoy it. My parents read, wrote, and spoke Bengali, but it is not a common enough language
+        to be included in base translations. To build on that, I believe what makes me who I am is that I have an internal
+        duty to make sure everyone feels welcome. This Earth is for everyone! 
+      </p>
+      <h2>These are my projects!</h2>
+      <a href="https://drive.google.com/file/d/1Hdh-eu3qnKjOdNvlVS1LH_hIiZdIXQTT/view" target="_blank" rel="noopener noreferrer">
+        Voices of the Intersection Anthology</a>
+
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
