Create new servlet, update index.html to include servlet button, create async function using fetch.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -28,6 +28,13 @@
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
+      
+      <button onclick="showQuote();">
+        Get CBT quote
+      </button>
+      <p id="quote-container"></p>
+      <p>Click <a href="/CBT-quotes">here</a> to see the server response directly.</p>
+    
     </div>
   </body>
 </html>
