--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -35,6 +35,13 @@
       <p id="quote-container"></p>
       <p>Click <a href="/CBT-quotes">here</a> to see the server response directly.</p>
     
+      <form action="/form-handler" method="POST">
+        <p>Enter some text here:</p>
+        <textarea name="text-input">...</textarea>
+        <br/>
+        <input type="submit" />
+        
+      </form>
     </div>
   </body>
 </html>
