Add another form field for email.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,11 +34,16 @@
       </button>
       <p id="quote-container"></p>
       <p>Click <a href="/CBT-quotes">here</a> to see the server response directly.</p>
-    
+        <h4>Contact Me!</h4>
       <form action="/form-handler" method="POST">
-        <p>Enter some text here:</p>
+        <p>Your Name:</p>
         <textarea name="text-input">...</textarea>
         <br/>
+
+        <p>Your Email:</p>
+        <textarea name="text2-input">...</textarea>
+        <br/>
+
         <input type="submit" />
         
       </form>
