Add seperate div for typing text feature using JS and HTML upon load.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onLoad="typeWriter();">
+      <div id="newContent">
+        <h2 id="demo"></h2>
+      </div>
     <div id="content">
       <h1>Siema's Portfolio</h1>
       <a href="https://www.linkedin.com/in/siemaalam/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
