Add plant image. Add moving text to top screen. Style image next to text.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <title>Siema's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <script src="script.js"></script>
   </head>
   <body onLoad="typeWriter();">
       <div id="newContent">
-        <h2 id="demo"></h2>
+          <div>
+            <p style="font-size: 60px;">Hi,</p>
+            <p style="font-size: 60px;" id="movingTxt"></p>
+          </div>
+        <img src="/images/plant1.jpg" id="Plant">
       </div>
     <div id="content">
-      <h1>Siema's Portfolio</h1>
+      <h1>Siema's Working Portfolio, Unstyled</h1>
+      <img src="/images/cat.jpg" width="100"/>
       <a href="https://www.linkedin.com/in/siemaalam/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       <a href="https://github.com/siemaaa" target="_blank" rel="noopener noreferrer">GitHub</a>
-      <img src="/images/cat.jpg" width="100"/>
       <p>Hi! I'm Siema, a rising junior at Macaulay in City College. I want to make more accessible systems!
         I come from immigrant parents, so I grew up feeling that a lot of things, especially technology, were not
         made with them in mind. Accessibility to me means breaking down barriers and making products that are easy 
