Add Sentiment Analysis Servlet and text to homepage.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -57,6 +57,7 @@
         <input type="submit" />
         
       </form>
+      <p id="sentimentTest">Here is where I test the sentiment analysis of this line.</p>
     </div>
   </body>
 </html>
